# groundstation

./: .gitignore  Dockerfile  Dockerfile.recorder  LICENSE  README.md  config.yml  main.py  pull.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: containers.yml
auto/: bus.py  common.py  config.py  decode_gate.py  decoder.py  doppler.py  events.py  external.py  logging_bus.py  main.py  models.py  pass_predictor.py  podman.py  recorder.py  requirements.txt  scheduler.py  skymap.py  state.py  tracker.py  transfer.py  tui.py  view.py  waterfall_store.py  web.py  web_ui.py
auto/templates/: index.html  skymap.html
decoders/ax100/: Dockerfile  ax100_decoder.grc  csp_helpers.py  decode.py  deframe.py  entrypoint.sh  noaa_apt_decoder.grc  pyproject.toml
decoders/gr-satellites/: Dockerfile  entrypoint.sh  gr-satellites-config.ini
decoders/satdump/: Dockerfile  satdump.sh  settings.json
decoders/waterfall/: Dockerfile  pyproject.toml  waterfall.py  waterfall.sh
flowgraphs/: Waterfall.grc  recorder.grc
image_cleaner/: Cargo.toml  README.md
image_cleaner/src/: main.rs
tests/: conftest.py  test_bus.py  test_decode_gate.py  test_doppler.py  test_iq_upload.py  test_pass_predictor.py  test_prioritize.py  test_scheduler.py  test_skymap.py  test_state_store.py  test_web_wire.py
