[package]
name = "image_cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
image = "0.24"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
